; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_filebuf.c_verify_last_error.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_filebuf.c_verify_last_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@GIT_ERROR_OS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"failed to write out file\00", align 1
@GIT_ERROR_ZLIB = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"Buffer error when writing out ZLib data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @verify_last_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @verify_last_error(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %15 [
    i32 129, label %7
    i32 130, label %10
    i32 128, label %12
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @GIT_ERROR_OS, align 4
  %9 = call i32 @git_error_set(i32 %8, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %16

10:                                               ; preds = %1
  %11 = call i32 (...) @git_error_set_oom()
  store i32 -1, i32* %2, align 4
  br label %16

12:                                               ; preds = %1
  %13 = load i32, i32* @GIT_ERROR_ZLIB, align 4
  %14 = call i32 @git_error_set(i32 %13, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %16

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %12, %10, %7
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @git_error_set(i32, i8*) #1

declare dso_local i32 @git_error_set_oom(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
